# rust_harbour_c_playground

./: Cargo.toml  README.md  build.rs  cli_fib_c.c  cli_fib_prg.prg  core.c  fibonacci.h  hbfibonacci.hbc  hbfibonacci.hbp  test_proc.prg
src/: c_lib.c  cli_fib_prg.c  cli_fib_prg.prg  cli_fib_prg_preprocessed.c  f.c  f.prg  lib.rs
