[package]
name = "fibonacci"
version = "0.3.0"
authors = ["hernad@bring.out.ba"]
build = "build.rs"

[lib]
name = "fibonacci"
crate-type = ["rlib"]

#[target.'cfg(target_os = "windows")'.lib]
#name = "fibonacci"
#crate-type = ["dylib"]


[[bin]]
name = "fibonacci-bin"
path = "bin/main.rs"


[dependencies]


[build-dependencies]
cc = "1.0.18"


[features]
default = ["foo"]
foo = []
bar = []
